--- a/dvc.yaml
+++ b/dvc.yaml
@@ -45,8 +45,8 @@ stages:
     outs:
     - reports/experiment_info.json  # Add the model_info.json file as an output
 
-  # model_registration:
-  #   cmd: python src/model/register_model.py
-  #   deps:
-  #   - reports/experiment_info.json
-  #   - src/model/register_model.py
+  model_registration:
+    cmd: python -m src.model.register_model
+    deps:
+    - reports/experiment_info.json
+    - src/model/register_model.py
