--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -29,6 +29,10 @@ jobs:
                 restore-keys: |
                   ${{ runner.os }}-pip-
             
+            - name: upgrade pip, setuptools and wheel
+              run: |
+                python -m pip install --upgrade pip setuptools wheel
+
             - name: install dependicies
               run: pip install -r requirements.txt
 
