pushing setuptools fix

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿aiobotocore
+aiobotocore
 aiohappyeyeballs==2.3.4
 aiohttp==3.10.0
 aiohttp-retry==2.8.3
@@ -174,6 +174,6 @@ yarl==1.9.4
 zc.lockfile==3.0.post1
 zipp==3.19.2
 prometheus_client
-setuptools
+setuptools>=65.0.0
 
 -e .
