--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -31,11 +31,11 @@ jobs:
             
             - name: upgrade pip and wheel
               run: |
-                python -m pip install --upgrade pip wheel
+                python -m pip install --upgrade pip wheel setuptools>=65.0.0
 
             - name: ensure setuptools is installed
               run: |
-                python -m pip install --upgrade setuptools || true
+                python -m pip install --upgrade setuptools>=65.0.0 || true
 
             - name: check pkg_resources and setuptools (diagnostic)
               run: |
@@ -53,11 +53,15 @@ jobs:
                 PY
 
             - name: install dependencies
-              run: python -m pip install -r requirements.txt
+              run: python -m pip install --upgrade-strategy only-if-needed -r requirements.txt
 
             - name: reinstall setuptools to ensure pkg_resources is available
               run: |
-                python -m pip install --force-reinstall --no-deps setuptools>=65.0.0
+                python -m pip install --force-reinstall setuptools>=65.0.0
+
+            - name: verify pkg_resources is available
+              run: |
+                python -c "import pkg_resources; print('pkg_resources version:', pkg_resources.__version__)"
 
             - name: run pipeline
               env:
