--- a/.github/workflows/ci_cd.yaml
+++ b/.github/workflows/ci_cd.yaml
@@ -1,46 +1,44 @@
-# .github\workflows\ci_cd.yaml
+# .github/workflows/ci_cd.yaml
 
 name: CiCd pipeline
 
 on: 
-    push:
-        branches:
-            - main
+  push:
+    branches:
+      - main
 
 jobs:
-    mlops-pipeline:
-        runs-on: ubuntu-latest
+  mlops-pipeline:
+    runs-on: ubuntu-latest
 
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
 
-        steps:
-            - name: checkout code
-              uses: actions/checkout@v3
+      - name: setup python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
 
-            - name: setup python
-              uses: actions/setup-python@v5
-              with:
-                python-version: '3.11'
+      - name: Cache pip dependencies
+        uses: actions/cache@v3
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
 
-            - name: Cache pip dependencies
-              uses: actions/cache@v3
-              with:
-                path: ~/.cache/pip
-                key: ${{ runner.os }}-pip-${{ hashFiles('requirements.txt') }}
-                restore-keys: |
-                  ${{ runner.os }}-pip-
-            
-            - name: upgrade pip
-              run: |
-                python -m pip install --upgrade pip setuptools wheel
+      - name: upgrade pip
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
 
-            - name: install dependencies and package
-              run: |
-                python -m pip install -r requirements.txt
-                python -m pip install -e .
+      - name: install dependencies and package
+        run: |
+          python -m pip install -r requirements.txt
+          python -m pip install -e .
 
-            - name: run pipeline
-              env:
-                CAPSTONE_TEST: ${{secrets.CAPSTONE_TEST}}
-              run: dvc repro
+      - name: run pipeline
+        env:
+          CAPSTONE_TEST: ${{secrets.CAPSTONE_TEST}}
+        run: dvc repro
 
-            
