--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,13 +9,15 @@ dependencies = [
 
     # -------- API / Service --------
     "fastapi>=0.115.0",
-    "uvicorn[standard]>=0.30.0",
+    "uvicorn[standard]>=0.30,<1.0",
 
     # -------- ML Stack --------
     "numpy>=1.26.0",
     "pandas>=2.2.0",
     "scikit-learn>=1.5.0",
+    "scipy>=1.14.0",
     "joblib>=1.4.0",
+    "nltk>=3.9.0",
 
     # -------- MLOps --------
     "mlflow==2.18.0",
@@ -36,6 +38,9 @@ dependencies = [
     "PyYAML>=6.0",
     "python-dotenv>=1.0.1",
 
-    # -------- Async HTTP (used by dagshub/mlflow) --------
+    # -------- Async HTTP --------
     "httpx>=0.23.0",
+
+    # -------- Build --------
+    "setuptools>=75.0.0",
 ]
